@@ -37,7 +37,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Video-Pattern
-  homepage: https://github.com/tupinek/Video-Pattern
+  homepage: https://github.com/michal-josef-spacek/Video-Pattern
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Video-Pattern
+  repository: git://github.com/michal-josef-spacek/Video-Pattern
 version: '0.09'
