@@ -25,8 +25,8 @@ requires 'Video::Delay::Const' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Video-Pattern';
-resources 'homepage' => 'https://github.com/tupinek/Video-Pattern';
-resources 'repository' => 'git://github.com/tupinek/Video-Pattern';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Video-Pattern';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Video-Pattern';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => '0.17';
 test_requires 'File::Temp' => 0;
