@@ -119,7 +119,7 @@ SEE ALSO
         Video::Delay class for delays defined by math function.
 
 REPOSITORY
-    <https://github.com/tupinek/Video-Pattern>
+    <https://github.com/michal-josef-spacek/Video-Pattern>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
